src/objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>